New style arrived

--- a/assets/css/basic_style.css
+++ b/assets/css/basic_style.css
@@ -37,13 +37,15 @@
 .left-side,
 .right-side{
 	height: 100%;
-	background: url("../img/background.jpg");
+	background: url("../img/background_v3.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 .right-side{
 	background: #fff;
 	overflow-y: scroll;
+	padding: 0 16px;
+	/* v3 */ background: url("../img/right-back.jpg");
 }
 /************/
 .blog-menu{
@@ -118,7 +120,7 @@
 	width: 100%;
 }
 .blog-posts article{
-	margin: 15%;
+	margin: 10%;
 	border-bottom: 1px solid #ddd;
 }
 .blog-posts article:first-child{
@@ -155,7 +157,8 @@
 	display: inline-block;
 }
 .blog-cat-label{
-	background: #e0c091;
+	/*background: #e0c091; This is old color */
+	background: #1e6be8;
 	padding: 4px 8px;
 	font-size: 0.6;
 	color: #fff;
@@ -182,7 +185,8 @@
 	color: #fff;
 }
 .login-title{
-	background: #e0c091;
+	/*background: #e0c091; This is old color */
+	background: #1e6be8;
 	color: #fff;
 	font-size: 1em;
 	border: 1px solid #e0c091!important;
@@ -259,17 +263,17 @@
 .post-view ul li {
 	display: inline;
 }
-.login-bar-menu a{
-	color: #888;
+.login-bar-menu{
+	background: #1e6be8;
 }
-<<<<<<< HEAD
+.login-bar-menu a{
+	color: #fff;
+}
 .user-exists{
 	font-weight: bold;
 	margin-top: 12px;
 	display: none;
 }
-=======
->>>>>>> 1833af15b69c183c571db5cb8023f379e6e7b86f
 
 /**
 *
@@ -277,7 +281,6 @@
 **/
 .login-bar-menu .btn{
 	background: none;
-<<<<<<< HEAD
 }
 
 /**
@@ -335,6 +338,4 @@
 	margin-top: 50px;
 	color: red;
 	display: none;
-=======
->>>>>>> 1833af15b69c183c571db5cb8023f379e6e7b86f
 }
